fix: article overflow

--- a/source/css/_partial/article.styl
+++ b/source/css/_partial/article.styl
@@ -1,5 +1,5 @@
 .post
-  max-width: content-max-width
+  max-width: 100%
   margin: auto
   font-family: 'Noto Serif', 'Noto Serif SC', sans-serif
 
